# boticelli

./: .containerignore  .gitignore  ACTOR_ARCHITECTURE.md  ACTOR_INTEGRATION_PROGRESS.md  ACTOR_SERVER_NEXT_STEPS.md  ACTOR_SERVER_STRATEGY.md  ACTOR_SERVER_TRAITS_PLAN.md  AI_NARRATIVE_TOML_GUIDE.md  ANTHROPIC_INTEGRATION_PLAN.md  ANTHROPIC_REQWEST_PLAN.md  BOT_COMMAND_INJECTION.md  BOT_OUTPUT_STATE_CAPTURE.md  BOT_SERVER_DEPLOYMENT_PLAN.md  BOT_SERVER_NEXT_STEPS.md  BOT_SERVER_OBSERVABILITY_STRATEGY.md  BUDGET_MULTIPLIER_DESIGN.md  CAROUSEL_COMPOSITION_STRATEGY.md  CAROUSEL_FEATURE_DESIGN.md  CLAUDE.md  CLIPPY_ALLOW_AUDIT.md  CONTENT_GENERATION.md  CONVERSATION_HISTORY_RETENTION_PLAN.md  Cargo.toml  Containerfile  DATABASE_SYNC_STRATEGY.md  DEPLOYMENT_CONFIG.md  DISCORD_API_COVERAGE_ANALYSIS.md  DISCORD_COMMAND_TESTING.md  DISCORD_COMMAND_TESTING_STRATEGY.md  DISCORD_COMMUNITY_SERVER_PLAN.md  DISCORD_CONTENT_ACTOR_PLAN.md  DISCORD_NARRATIVE.md  DISCORD_SCHEMA.md  DISCORD_SETUP.md  DISCORD_TEARDOWN_ANALYSIS.md  ERROR_RECOVERY.md  FEATURE_GATE_AUDIT.md  FEATURE_GATE_ISSUES.md  FEATURE_GATE_TESTING_STRATEGY.md  GEMINI.md  (+80 more)
.github/workflows/: feature-gate-check.yml
.narrative_state/: global.json
crates/botticelli/: Cargo.toml  README.md
crates/botticelli-core/: Cargo.toml  README.md
crates/botticelli-database/: Cargo.toml  README.md
crates/botticelli-error/: Cargo.toml  README.md
crates/botticelli-error/src/: lib.rs
crates/botticelli-interface/: Cargo.toml  README.md
crates/botticelli-models/: README.md
crates/botticelli-narrative/: README.md
crates/botticelli-rate-limit/: README.md
crates/botticelli-social/: README.md
crates/botticelli-storage/: README.md
crates/botticelli-tui/: README.md
crates/botticelli/src/: lib.rs  main.rs  observability.rs  telemetry.rs
crates/botticelli/src/cli/: commands.rs  content.rs  mcp.rs  mod.rs  run.rs  server.rs  tui_handler.rs  validate.rs
crates/botticelli/tests/: cache_test.rs  discord_bot_commands_test.rs  discord_commands_test.rs  discord_publish_welcome_test.rs  publish_welcome_test.rs  table_reference_test.rs  table_references_test.rs
crates/botticelli_actor/: ACTOR_GUIDE.md  CRITIQUE.md  README.md  (+1 more)
crates/botticelli_core/: Cargo.toml
crates/botticelli_core/src/: anthropic.rs  budget.rs  input.rs  lib.rs  media.rs  message.rs  observability.rs  output.rs  request.rs  role.rs  telemetry.rs  token_counting.rs  token_usage.rs
crates/botticelli_mcp_client/: Cargo.toml
crates/botticelli_mcp_client/src/: client.rs  error.rs  lib.rs  retry.rs  tool_executor.rs
crates/botticelli_mcp_client/src/schema/: anthropic.rs  gemini.rs  groq.rs  huggingface.rs  mod.rs  ollama.rs  openai.rs
examples/: content_workflow.toml  discord_actor_with_persistence.rs  test_discord_commands.rs
narrations/: mint.toml  showcase.toml
narratives/: NARRATIVES.md  README.md  discord_content_examples.toml  discord_infrastructure.toml  generate_channel_posts.toml  generate_guilds.toml  generate_users.toml
scripts/: feature-gate-check.sh  test-observability.sh  verify-metrics.sh
src/: cli.rs  core.rs  error.rs  interface.rs  lib.rs  main.rs
tests/: content_generation_repository_test.rs  discord_bot_commands_test.rs  error_recovery_phase2_test.rs  gemini.rs  gemini_2_0_models_test.rs  gemini_live_basic_test.rs  gemini_live_error_test.rs  gemini_live_integration_test.rs  gemini_mock_test.rs  gemini_model_test.rs  gemini_streaming_test.rs  model_specific_rate_limits_test.rs  narrative_content_generation_test.rs  narrative_executor_test.rs  narrative_in_memory_repository_test.rs  narrative_processor_integration_test.rs  narrative_test.rs  rate_limit_config_test.rs  rate_limit_detector_test.rs  rate_limit_integration_test.rs  rate_limit_limiter_test.rs  rate_limit_tiers_test.rs  storage_filesystem_test.rs
(+428 files in other folders)
