[package]
name = "botticelli-error"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Error types for the Botticelli LLM API library"
keywords.workspace = true
categories.workspace = true

[dependencies]
derive_more = { workspace = true }
derive-new = { workspace = true }
