[package]
name = "botticelli_core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Core data types for the Botticelli LLM API library"
keywords.workspace = true
categories.workspace = true

[features]
default = []
metrics = []
otel-otlp = []
models = ["dep:botticelli_error", "dep:futures", "dep:async-trait"]
anthropic = ["models", "dep:reqwest"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
derive_more = { workspace = true, features = ["display", "from"] }
derive-getters = { workspace = true }
derive_setters = { workspace = true }
derive_builder = { workspace = true }
opentelemetry = "0.31"
opentelemetry_sdk = "0.31"
opentelemetry-stdout = "0.31"
opentelemetry-otlp = { version = "0.31", features = ["http-proto", "reqwest-client"] }
tracing = { workspace = true }
tracing-opentelemetry = "0.32"
tracing-subscriber = { workspace = true, features = ["env-filter", "fmt"] }
botticelli_error = { workspace = true, features = ["models"], optional = true }
futures = { version = "0.3", optional = true }
async-trait = { version = "0.1", optional = true }
reqwest = { workspace = true, features = ["json"], optional = true }
