[package]
name = "botticelli_mcp_client"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
botticelli_core.workspace = true
botticelli_error.workspace = true
botticelli_mcp = { path = "../botticelli_mcp", version = "0.1.0" }

async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
derive_more.workspace = true
derive-getters.workspace = true
typed-builder = "0.20"
